; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/phy/extr_broadcom.c_bcm54xx_shadow_read.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/phy/extr_broadcom.c_bcm54xx_shadow_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.phy_device = type { i32 }

@MII_BCM54XX_SHD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.phy_device*, i32)* @bcm54xx_shadow_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bcm54xx_shadow_read(%struct.phy_device* %0, i32 %1) #0 {
  %3 = alloca %struct.phy_device*, align 8
  %4 = alloca i32, align 4
  store %struct.phy_device* %0, %struct.phy_device** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.phy_device*, %struct.phy_device** %3, align 8
  %6 = load i32, i32* @MII_BCM54XX_SHD, align 4
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @MII_BCM54XX_SHD_VAL(i32 %7)
  %9 = call i32 @phy_write(%struct.phy_device* %5, i32 %6, i32 %8)
  %10 = load %struct.phy_device*, %struct.phy_device** %3, align 8
  %11 = load i32, i32* @MII_BCM54XX_SHD, align 4
  %12 = call i32 @phy_read(%struct.phy_device* %10, i32 %11)
  %13 = call i32 @MII_BCM54XX_SHD_DATA(i32 %12)
  ret i32 %13
}

declare dso_local i32 @phy_write(%struct.phy_device*, i32, i32) #1

declare dso_local i32 @MII_BCM54XX_SHD_VAL(i32) #1

declare dso_local i32 @MII_BCM54XX_SHD_DATA(i32) #1

declare dso_local i32 @phy_read(%struct.phy_device*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
